# STM32_FreeRTOS

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: FreeRTOS.h.7D201BE100A94ECD.idx  FreeRTOSConfig.h.73FFB0DA86A07BA4.idx  cmsis_compiler.h.589A453A116A9DF4.idx  cmsis_compiler.h.6948A64713F8798D.idx  cmsis_gcc.h.05D7994A0789BAF5.idx  cmsis_gcc.h.4C0DF1633245D7C2.idx  cmsis_version.h.29A5398CA127AABB.idx  cmsis_version.h.9B61AD8F738E297E.idx  core_cm4.h.376F16EB47C2BA5A.idx  core_cm4.h.59EC2F2C53812DD0.idx  croutine.c.3514CF4C89F557BC.idx  croutine.h.E9A0A106C50CB9A9.idx  deprecated_definitions.h.00E125D5B8FF97AB.idx  event_groups.c.C0EDA0FF81F4FB0C.idx  event_groups.h.58BF99DACE2822D0.idx  heap_4.c.4C2FE91CD30544F3.idx  list.c.0BDD17FC7CEB0FE4.idx  list.h.85A0A109FEB01101.idx  main.c.788C63574A7F0AE3.idx  main.c.9A9AB27FD3486D9E.idx  main.h.94F2C597984C8EB1.idx  main.h.FFA12EAFAB1BE974.idx  mpu_armv7.h.A4A9AA7A4ED760F7.idx  mpu_armv7.h.F91441015607C97E.idx  mpu_wrappers.h.A665CDDEF5CF7E30.idx  port.c.8D5CDE976109EFC7.idx  portable.h.270F426B6014AFCB.idx  portmacro.h.84AA5F91A955FD79.idx  projdefs.h.7B10B9A7B550BE56.idx  queue.c.BA9A75126E4BB608.idx  queue.h.CB3548CAD71BD5EE.idx  stack_macros.h.E3DA65A9C82BEE3A.idx  stm32_hal_legacy.h.1915FBF11AF5BAD9.idx  stm32_hal_legacy.h.1E5D9049C4C93A7D.idx  stm32f446xx.h.4DBDDF4A7843D010.idx  stm32f446xx.h.D06DF72482566697.idx  stm32f4xx.h.3E6A49977E7E2928.idx  stm32f4xx.h.A752B46D7B4AA00D.idx  stm32f4xx_hal.c.7DAB61CA5E6CCFCF.idx  stm32f4xx_hal.c.B62823FC2C859569.idx  (+84 more)
Config/: FreeRTOSConfig.h
Core/Src/: main.c
